# rustsar

./: Cargo.toml  README.md  Taskfile.yml
src/rustsar/: lib.rs
src/rustsar/daisy/: daisy.c
src/rustsar/math/: mod.rs  number.rs  poly.rs
src/rustsar/satorbit/: cartesian.rs  constants.rs  ellipsiod.rs  mod.rs  orbit.rs
